# CodeWiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.zh-CN.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish-npm.yml  publish-pypi.yml  test.yml
backend/: README.md  build_frontend.py  package-lock.json  package.json  vitest.config.ts
backend-ts/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend-ts/scripts/: package-dry-run.mjs  package-smoke-env.d.mts  verify-release-version.mjs
backend-ts/src/: errors.ts  lite.ts  types.ts
backend-ts/src/analysis/: analysisService.ts  graphCommunities.ts  graphElements.ts  sourceParser.ts
backend-ts/src/cli/: formatters.ts  lite.ts
backend-ts/src/db/: analysisRunRepository.ts  graphRepository.ts  llmRunRepository.ts  repoRepository.ts  schema.ts  wikiRepository.ts
backend-ts/src/graph/: communityNamingService.ts
backend-ts/src/graphrag/: embeddingIndex.ts  payloads.ts
backend-ts/src/http/: context.ts
backend-ts/src/lite/: operations.ts  payloads.ts  statusPayloads.ts
backend-ts/src/mcp/: server.ts  toolkit.ts
backend-ts/src/presenters/: fileTree.ts
backend-ts/src/scanner/: fileUtils.ts  ignore.ts  language.ts  paths.ts  payloads.ts
backend-ts/src/services/: repositoryService.ts
backend-ts/src/wiki/: translation.ts
backend-ts/test/: api.test.ts  communityNamingService.test.ts  errors.test.ts  graphrag.test.ts  qa.test.ts  repositoryService.test.ts  version.test.ts  workspaceScripts.test.ts
backend/app/: cli.py  config.py  database.py  env_config.py  frontend.py  main.py  mcp_server.py
backend/app/api/: ask.py  dependencies.py  files.py  graph.py  repos.py  runs.py  settings.py  wiki.py
backend/app/cli/: analysis.py  ask.py  common.py  config.py  files.py  graph.py  graphrag.py  lite.py  main.py  repos.py  serve.py  services.py  skill.py  wiki.py
backend/app/db/: __init__.py  base.py  batching.py  dialects.py  mappers.py  records.py  schema.py  store.py  utils.py
backend/app/mcp_server/: __init__.py  __main__.py  args.py  handlers.py  protocol.py  server.py  tools.py  transport.py  types.py  utils.py
backend/app/models/: __init__.py  base.py  graph.py  rag.py  repo.py  wiki.py
backend/app/prompts/: catalog.md  community_summary.md  page.md  qa.md  translation.md
backend/app/schemas/: ask.py  graph.py  wiki.py
backend/app/services/: analysis_pipeline.py  analyzer.py  ast_cache.py  ast_parser.py  async_tasks.py  chunk_builder.py  community_detector.py  community_edges.py  community_namer.py  community_records.py  embedding_index.py  file_roles.py  graph_builder.py  graph_provenance.py  graph_rag.py  incremental_updater.py  language_detector.py  lite.py  llm_gateway.py  llm_operations.py  llm_run_recorder.py  model_router.py  prompts.py  question_answerer.py  repo_context.py  repo_metadata.py  repo_scanner.py  source_file_cache.py  wiki_generator.py
backend/scripts/: check-ports.mjs  copy-prompts.mjs  package-smoke-env.mjs  package-smoke.mjs  verify-release-version.d.mts
backend/skills/: __init__.py
backend/skills/codewiki/: SKILL.md  __init__.py
backend/src/: cli.ts  config.ts  index.ts  lite.ts  version.ts
backend/src/analysis/: analysisService.ts  graphChunks.ts  graphCommunities.ts  graphRelationships.ts  graphUtils.ts  repositoryGraphBuilder.ts
backend/src/cli/: formatters.ts  runtime.ts
backend/src/db/: analysisRunRepository.ts  embeddingRepository.ts  factory.ts  graphRepository.ts  llmRunRepository.ts  mappers.ts  pgStore.ts  repoRepository.ts  retrievalTraceRepository.ts  schema.ts  sqlite.ts  store.ts  types.ts  wikiRepository.ts
backend/src/graph/: communityNaming.ts  communityNamingRules.ts  communityNamingService.ts  operations.ts
backend/src/graphrag/: chunkBuilder.ts  defaults.ts  embeddingIndex.ts  graphragService.ts  payloads.ts  retrieval.ts
backend/src/http/: context.ts  logging.ts  request.ts  server.ts
backend/src/lite/: filePayloads.ts  graphPayloads.ts  operations.ts  payloadCommon.ts
backend/src/llm/: cache.ts  gateway.ts  messages.ts  modelRouter.ts
backend/src/mcp/: protocol.ts  stdio.ts  toolkit.ts  tools.ts
backend/src/presenters/: payloads.ts
backend/src/prompts/: catalog.md  community_summary.md  page.md  qa.md  translation.md
backend/src/scanner/: git.ts  (+2 more)
backend/test/: api.test.ts  cli.test.ts  communityNamingService.test.ts  config.test.ts  graphrag.test.ts  logging.test.ts  mcp.test.ts  qa.test.ts  repoResolver.test.ts  repositoryGraphBuilder.test.ts  repositoryService.test.ts  scanner.test.ts  wiki.test.ts  workspaceScripts.test.ts
docs/: README.zh-CN.md  benchmark-report-2026-05-22.md  benchmarking.md  changelog.md  design.md  hierarchical-communities-design.md  lite-benchmark-report-2026-05-27.md  postgres-compatibility-design.md  typescript-backend.md  usage.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: dev.mjs
frontend/src/: App.tsx  main.tsx  polyfills.ts  styles.css
scripts/: benchmark_lite_mode.py  benchmark_repos.py  check_python.py  clean.d.mts  clean.mjs  clean.py  dev.mjs  dev.py  ensure_pip.py  frontend-npm.d.mts  frontend-npm.mjs  frontend_npm.py  kill_ports.py  ports.mjs
tests/backend/: test_analysis_service.py  test_ast_parser.py  test_async_tasks.py  test_benchmark_repos_script.py  test_cli.py  test_community_detector.py  test_community_edges.py  test_community_namer.py  test_config.py  test_database_schema.py  test_dev_script.py  test_frontend_static.py  test_graph_query.py  test_graph_rag.py  test_incremental_updater.py  test_kill_ports.py  test_language_detector.py  test_llm_cache.py  test_mcp_server.py  test_mermaid_validation.py  test_model_router.py  test_postgres_store.py  test_question_answerer.py  test_repo_context.py  test_repo_files_api.py  test_repo_scanner.py  test_store_factory.py  test_wiki_generator.py
tests/scripts/: test_benchmark_repos_script.py  test_dev_script.py
(+327 files in other folders)
