[project]
name = "code-wiki-platform"
version = "0.1.0"
description = "Single-user Code Wiki platform with AST graph, GraphRAG, and LiteLLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "litellm>=1.60.0",
  "networkx>=3.4.0",
  "pathspec>=0.12.1",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.35",
  "tree-sitter>=0.23.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-typescript>=0.23.2",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
